[gd_scene load_steps=12 format=3 uid="uid://c0qv5q730bmsw"]

[ext_resource type="Script" uid="uid://clu4h6guyp1pa" path="res://environments/buildings/bar_minigame/glass.gd" id="1_gdm7c"]

[sub_resource type="Gradient" id="Gradient_h8ig0"]
offsets = PackedFloat32Array(0, 0.264368, 1)
colors = PackedColorArray(0.262745, 0.2, 0.176471, 0.87451, 0.298039, 0.235294, 0.215686, 0.65098, 1, 1, 1, 0.258824)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_htja8"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_iue8a"]
color_ramp = SubResource("Gradient_h8ig0")
noise = SubResource("FastNoiseLite_htja8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_28hlk"]
transparency = 1
albedo_texture = SubResource("NoiseTexture2D_iue8a")

[sub_resource type="CylinderMesh" id="CylinderMesh_tp3dc"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hgrjp"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.364706)

[sub_resource type="CylinderMesh" id="CylinderMesh_gdm7c"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2bhkj"]
transparency = 1
albedo_color = Color(0.94902, 0.65098, 0.454902, 0.917647)

[sub_resource type="CylinderMesh" id="CylinderMesh_s0q86"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.001

[sub_resource type="BoxShape3D" id="BoxShape3D_h8ig0"]
size = Vector3(0.226807, 0.442139, 0.251953)

[node name="Glass" type="Node3D"]
script = ExtResource("1_gdm7c")

[node name="Dirt" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
material_override = SubResource("StandardMaterial3D_28hlk")
mesh = SubResource("CylinderMesh_tp3dc")

[node name="Glass" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
material_override = SubResource("StandardMaterial3D_hgrjp")
mesh = SubResource("CylinderMesh_gdm7c")

[node name="Liquid" type="MeshInstance3D" parent="Glass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
visible = false
material_override = SubResource("StandardMaterial3D_2bhkj")
mesh = SubResource("CylinderMesh_s0q86")
skeleton = NodePath("../..")

[node name="SelectBox" type="Area3D" parent="."]

[node name="SelectBoxShape" type="CollisionShape3D" parent="SelectBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204956, 0)
shape = SubResource("BoxShape3D_h8ig0")

[connection signal="input_event" from="SelectBox" to="." method="_on_select_box_input_event"]
